--- a/iw4x_controllers.html
+++ b/iw4x_controllers.html
@@ -68,40 +68,44 @@
                 <!-- Support Item Starts -->
                 <div class="blog-item-wrapper wow fadeInUp" data-wow-delay="0.3s">
                     <div class="blog-item-text">
-                        <h4>
+                        <!--
+						<h4>
                             Video Guide:
                         </h4>
                         <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/WcV33cu1K68" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <h4>
                             Text Guide:
                         </h4>
-                        <p>As MW2 on PC does not natively support controllers, we must use external programs to make a controller emulate keyboard and mouse inputs. This guide will cover using Steam's Big Picture mode, which has this feature built in.</p>
-                        <h3>Step 1: Adding IW4x to your Steam library.</h3>
-                        <ol>
-                            <li>Launch Steam and click the text in the bottom left that says '[+] ADD A GAME'.</li>
-                            <li>Select the option 'Add a Non-Steam Game...'.</li>
-                            <li>Click the 'Browse' button.</li>
-                            <li>In the browse file window, locate your IW4x install and select 'iw4x.exe', then click the 'Open' button.</li>
-                            <li>Now there should be a tick in the box next to iw4x, now simply click the button 'ADD SELECTED PROGRAMS'.</li>
-                            <li>Then, IW4x has been added to your Steam library and can be launched at any time from within Steam.</li>
-                        </ol>
-                        <h3>Step 2: Enabling Controller Configuration Support</h3>
-                        <ol>
-                            <li>Connect your controller to your PC via USB or Bluetooth.</li>
-                            <li>Open steam and select the 'Big Picture Mode' mode icon (It's located at the top right of the steam window next to minimise).</li>
-                            <li>Once in Big Picture mode go to Settings (It's the cog icon in the top right).</li>
-                            <li>In settings, select the 'Controller Settings' option.</li>
-                            <li>Now, depending on the controller you are using, enable the configuration support. (e.g. For an Xbox controller, enable 'Xbox Configuration Support').</li>
-                        </ol>
-                        <h3>Step 3: Controller Configuration</h3>
-                        <ol>
-                            <li>Again, while in Big Picture mode, go to settings then controller settings. Plug in your controller, make sure it is detected, and enable the configuration support for your controller.</li>
-                            <li>Go to your library, find IW4x, select 'Manage Shortcut' then the 'Controller Configuration' option. You will now be presented with a image with your controller.</li>
-                            <li>Now select the 'BROWSE CONFIGS' button (Xbox Controllers -> X Button) (PS4 Controllers -> SQUARE Button).</li>
-                            <li>You should now be on a list screen of configurations, Go to the 'Community' tab and press the 'SHOW OTHER CONTROLLER TYPES' button (Xbox Controllers -> Y Button) (PS4 Controllers -> TRIANGLE Button).</li>
-                            <li>Now search the list till you find the 'H3X1C's ELITE IW4x Config V2' Configuration, press the (Xbox Controllers -> A Button ) (PS4 Controllers -> CROSS Button) to 'IMPORT CONFIG'.</li>
-                            <li>Then, you just need to apply the configuration. For Xbox, this will be the "X" Button and for PS4 Controllers, this will be the SQUARE button.</li>
-                        </ol>
+						-->
+						<h3>Important</h3>
+						<p>You should disable Steam's controller support (or close Steam) before trying controllers on IW4x. Simply go to Steam Settings -> Controller -> General Controller Settings and <strong>untick</strong> the Checkboxes like shown below.</p>
+						<img src="https://i.imgur.com/U1bs5Z9.png" width="700">
+						<br>
+						<br>
+                        <h4>Xbox Controllers</h4>
+						<p>Xbox Controllers should just be plug-and-play. Simply plug in your controller, and open IW4x!</p>
+						<h4>PS4 Controllers</h4>
+						<p>PS4 controllers require a bit more setup.</p>
+						<ol>
+						<li>Download <a href="https://github.com/Ryochan7/DS4Windows/releases/latest">DS4Windows</a>. We recommend downloading <code>DS4Windows_VERSION_x64.zip</code>.</li>
+						<li>Open the downloaded zip, and copy the <code>DS4Windows</code> folder to a safe place like your Documents folder.</li>
+						<li>Open the extracted folder, then open <code>DS4Windows</code></li>
+						<img src="https://i.imgur.com/sxik1Bs.png">
+						<li>If you get a message like this, then hit <code>Yes</code>.</li>
+						<img src="https://i.imgur.com/BEqRTW4.png">
+						<p>4a. Your browser should open, and you want to download the Windows x64 version.</p>
+						<img src="https://i.imgur.com/s2FRt73.png">
+						<p>4b. Open & install .NET.</p>
+						<li>After installation, try DS4Windows again.</li>
+						<li>Select <code>Appdata</code> for your SaveWhere path.</li>
+						<img src="https://i.imgur.com/3EJ1wzA.png">
+						<li>Install the ViGEmBus Driver.</li>
+						<img src="https://i.imgur.com/RHrY0Wu.png">
+						<li>Connect your PS4 Controller to your PC. If you are using bluetooth, follow the prompts inside DS4Windows</li>
+						<li>Once connected, hit Finish on the Welcome to DS4Windows screen.</li>
+						<li>Configure your controller and start DS4Windows in the main window.</li>
+						<li>Go in game and see if your controller works!</li>
+						</ol>
                     </div>
                 </div>
                 <!-- Support Item Wrapper Ends-->
