--- a/iw4x_controllers.html
+++ b/iw4x_controllers.html
@@ -79,7 +79,7 @@
 						-->
 						<h3>Important</h3>
 						<p>You should disable Steam's controller support (or close Steam) before trying controllers on IW4x. Simply go to Steam Settings -> Controller -> General Controller Settings and <strong>untick</strong> the Checkboxes like shown below.</p>
-						<img src="https://i.imgur.com/U1bs5Z9.png" width="700">
+						<img src="https://i.imgur.com/U1bs5Z9.png" width="700" class="img-fluid">
 						<br>
 						<br>
                         <h4>Xbox Controllers</h4>
@@ -90,17 +90,17 @@
 						<li>Download <a href="https://github.com/Ryochan7/DS4Windows/releases/latest">DS4Windows</a>. We recommend downloading <code>DS4Windows_VERSION_x64.zip</code>.</li>
 						<li>Open the downloaded zip, and copy the <code>DS4Windows</code> folder to a safe place like your Documents folder.</li>
 						<li>Open the extracted folder, then open <code>DS4Windows</code></li>
-						<img src="https://i.imgur.com/sxik1Bs.png">
+						<img src="https://i.imgur.com/sxik1Bs.png" class="img-fluid">
 						<li>If you get a message like this, then hit <code>Yes</code>.</li>
-						<img src="https://i.imgur.com/BEqRTW4.png">
+						<img src="https://i.imgur.com/BEqRTW4.png" class="img-fluid">
 						<p>4a. Your browser should open, and you want to download the Windows x64 version.</p>
-						<img src="https://i.imgur.com/s2FRt73.png">
+						<img src="https://i.imgur.com/s2FRt73.png" class="img-fluid">
 						<p>4b. Open & install .NET.</p>
 						<li>After installation, try DS4Windows again.</li>
 						<li>Select <code>Appdata</code> for your SaveWhere path.</li>
-						<img src="https://i.imgur.com/3EJ1wzA.png">
+						<img src="https://i.imgur.com/3EJ1wzA.png" class="img-fluid">
 						<li>Install the ViGEmBus Driver.</li>
-						<img src="https://i.imgur.com/RHrY0Wu.png">
+						<img src="https://i.imgur.com/RHrY0Wu.png" class="img-fluid">
 						<li>Connect your PS4 Controller to your PC. If you are using bluetooth, follow the prompts inside DS4Windows</li>
 						<li>Once connected, hit Finish on the Welcome to DS4Windows screen.</li>
 						<li>Configure your controller and start DS4Windows in the main window.</li>
