--- a/iw4x_controllers.html
+++ b/iw4x_controllers.html
@@ -68,44 +68,43 @@
                 <!-- Support Item Starts -->
                 <div class="blog-item-wrapper wow fadeInUp" data-wow-delay="0.3s">
                     <div class="blog-item-text">
-                        <!--
-						<h4>
-                            Video Guide:
-                        </h4>
-                        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/WcV33cu1K68" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <h4>
-                            Text Guide:
-                        </h4>
-						-->
-						<h3>Important</h3>
-						<p>You should disable Steam's controller support (or close Steam) before trying controllers on IW4x. Simply go to Steam Settings -> Controller -> General Controller Settings and <strong>untick</strong> the Checkboxes like shown below.</p>
-						<img src="https://i.imgur.com/U1bs5Z9.png" width="700" class="img-fluid">
-						<br>
-						<br>
+                        <h3>Important</h3>
+                        <p>You should disable Steam's controller support (or close Steam) before trying controllers on
+                            IW4x. Simply go to Steam Settings -> Controller -> General Controller Settings and
+                            <strong>untick</strong> the Checkboxes like shown below.
+                        </p>
+                        <img src="https://i.imgur.com/U1bs5Z9.png" width="700" class="img-fluid">
+                        <br>
+                        <br>
                         <h4>Xbox Controllers</h4>
-						<p>Xbox Controllers should just be plug-and-play. Simply plug in your controller, and open IW4x!</p>
-						<h4>PS4 Controllers</h4>
-						<p>PS4 controllers require a bit more setup.</p>
-						<ol>
-						<li>Download <a href="https://github.com/Ryochan7/DS4Windows/releases/latest">DS4Windows</a>. We recommend downloading <code>DS4Windows_VERSION_x64.zip</code>.</li>
-						<li>Open the downloaded zip, and copy the <code>DS4Windows</code> folder to a safe place like your Documents folder.</li>
-						<li>Open the extracted folder, then open <code>DS4Windows</code></li>
-						<img src="https://i.imgur.com/sxik1Bs.png" class="img-fluid">
-						<li>If you get a message like this, then hit <code>Yes</code>.</li>
-						<img src="https://i.imgur.com/BEqRTW4.png" class="img-fluid">
-						<p>4a. Your browser should open, and you want to download the Windows x64 version.</p>
-						<img src="https://i.imgur.com/s2FRt73.png" class="img-fluid">
-						<p>4b. Open & install .NET.</p>
-						<li>After installation, try DS4Windows again.</li>
-						<li>Select <code>Appdata</code> for your SaveWhere path.</li>
-						<img src="https://i.imgur.com/3EJ1wzA.png" class="img-fluid">
-						<li>Install the ViGEmBus Driver.</li>
-						<img src="https://i.imgur.com/RHrY0Wu.png" class="img-fluid">
-						<li>Connect your PS4 Controller to your PC. If you are using bluetooth, follow the prompts inside DS4Windows</li>
-						<li>Once connected, hit Finish on the Welcome to DS4Windows screen.</li>
-						<li>Configure your controller and start DS4Windows in the main window.</li>
-						<li>Go in game and see if your controller works!</li>
-						</ol>
+                        <p>Xbox Controllers should just be plug-and-play. Simply plug in your controller, and open IW4x!
+                        </p>
+                        <h4>PS4 Controllers</h4>
+                        <p>PS4 controllers require a bit more setup.</p>
+                        <ol>
+                            <li>Download <a
+                                    href="https://github.com/Ryochan7/DS4Windows/releases/latest">DS4Windows</a>. We
+                                recommend downloading <code>DS4Windows_VERSION_x64.zip</code>.</li>
+                            <li>Open the downloaded zip, and copy the <code>DS4Windows</code> folder to a safe place
+                                like your Documents folder.</li>
+                            <li>Open the extracted folder, then open <code>DS4Windows</code></li>
+                            <img src="https://i.imgur.com/sxik1Bs.png" class="img-fluid">
+                            <li>If you get a message like this, then hit <code>Yes</code>.</li>
+                            <img src="https://i.imgur.com/BEqRTW4.png" class="img-fluid">
+                            <p>4a. Your browser should open, and you want to download the Windows x64 version.</p>
+                            <img src="https://i.imgur.com/s2FRt73.png" class="img-fluid">
+                            <p>4b. Open & install .NET.</p>
+                            <li>After installation, try DS4Windows again.</li>
+                            <li>Select <code>Appdata</code> for your SaveWhere path.</li>
+                            <img src="https://i.imgur.com/3EJ1wzA.png" class="img-fluid">
+                            <li>Install the ViGEmBus Driver.</li>
+                            <img src="https://i.imgur.com/RHrY0Wu.png" class="img-fluid">
+                            <li>Connect your PS4 Controller to your PC. If you are using bluetooth, follow the prompts
+                                inside DS4Windows</li>
+                            <li>Once connected, hit Finish on the Welcome to DS4Windows screen.</li>
+                            <li>Configure your controller and start DS4Windows in the main window.</li>
+                            <li>Go in game and see if your controller works!</li>
+                        </ol>
                     </div>
                 </div>
                 <!-- Support Item Wrapper Ends-->
