--- a/index.html
+++ b/index.html
@@ -148,6 +148,15 @@
                         <p>Dedicated servers allow the community to host their own servers to. A server list is available in-game.</p>
                     </div>
                 </div>
+		<div class="col-md-4 col-sm-6">
+                    <div class="item-boxes wow fadeInDown" data-wow-delay="1s">
+                        <div class="icon">
+                            <i class="fas fa-eye"></i>
+                        </div>
+                        <h4>Native Controller Support</h4>
+                        <p>No need for third party emulation tools! We add native controller suppor, and aim assist, to the game.</p>
+                    </div>
+                </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="item-boxes wow fadeInDown" data-wow-delay="1.2s">
                         <div class="icon">
