--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 		<div class="col-md-4 col-sm-6">
                     <div class="item-boxes wow fadeInDown" data-wow-delay="1s">
                         <div class="icon">
-                            <i class="fas fa-eye"></i>
+                            <i class="fas fa-gamepad"></i>
                         </div>
                         <h4>Native Controller Support</h4>
                         <p>No need for third party emulation tools! We add native controller suppor, and aim assist, to the game.</p>
