--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                             <i class="fas fa-gamepad"></i>
                         </div>
                         <h4>Native Controller Support</h4>
-                        <p>No need for third party emulation tools! We add native controller suppor, and aim assist, to the game.</p>
+                        <p>No need for third party emulation tools! We add native controller support, and aim assist, to the game.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6">
